--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <path id="BI" data-name="Burundi" data-id="BI"
                 d="m 1148.2,590 -0.3,-2.5 0,0 -3,-0.4 -1.7,3.6 -3.5,-0.5 1.4,2.9 0.1,1.1 2,6.1 -0.1,0.3 0.6,-0.1 2.1,-2.3 2.2,-3.3 1.4,-1.4 0,-2 -1.2,-1.5 z" />
 
-            <path id="BE" data-name="Belgium" data-id="BE"
+            <path id="BE" data-name="Belgium" data-id="BE" class="visited"
                 d="m 1000.7,246.2 -4.4,1.3 -3.6,-0.5 0,0 -3.8,1.2 0.7,2.2 2.2,0.1 2.4,2.4 3.4,2.9 2.5,-0.4 4.4,2.8 0.4,-3.5 1.3,-0.2 0.4,-4.2 -2.8,-1.4 -3.1,-2.7 z" />
 
             <path id="BJ" data-name="Benin" data-id="BJ"
